using UnityEngine;

public class HashAnimationsNames
{
    public int UpDirection = Animator.StringToHash("IsUp");
    public int DownDirection = Animator.StringToHash("IsDown");
    public int LeftDirection = Animator.StringToHash("IsLeft");
    public int RightDirection = Animator.StringToHash("IsRight");
}